phase4/03-disallow-privileged.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: disallow-privileged-containers
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: privileged-containers
      match:
        any:
        - resources:
            kinds: [Pod]
      validate:
        message: "Les conteneurs privilegies (privileged: true) sont interdits."
        pattern:
          spec:
            containers:
              - =(securityContext):
                  =(privileged): "false"
