phase4/07-require-probes.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-probes
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-liveness-readiness
      match:
        any:
        - resources:
            kinds: [Pod]
      exclude:
        any:
        - resources:
            namespaces: [security-tools]
      validate:
        message: "Chaque conteneur doit definir une livenessProbe et une readinessProbe."
        pattern:
          spec:
            containers:
              - livenessProbe: {}
                readinessProbe: {}
