phase4/08-require-labels.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: require-labels
spec:
  validationFailureAction: Enforce
  background: true
  rules:
    - name: check-required-labels
      match:
        any:
        - resources:
            kinds: [Pod, Deployment]
      validate:
        message: "Les labels 'app', 'owner' et 'environment' sont obligatoires."
        pattern:
          metadata:
            labels:
              app: "?*"
              owner: "?*"
              environment: "?*"
